<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings"
            app:titleTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/type_tv"
                android:text="@string/init_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/map_size_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_tv"/>

            <SeekBar
                android:id="@+id/map_size_sb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/vertical_left_barrier"
                app:layout_constraintEnd_toStartOf="@id/vertical_right_barrier"
                app:layout_constraintTop_toTopOf="@id/map_size_tv"
                app:layout_constraintBottom_toBottomOf="@id/map_size_tv" />

            <TextView
                android:id="@+id/map_size_result_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                tool:text="50*50"
                app:layout_constraintTop_toTopOf="@id/map_size_tv"
                app:layout_constraintBottom_toBottomOf="@id/map_size_tv"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/speed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/speed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/map_size_tv"/>

            <SeekBar
                android:id="@+id/speed_sb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/vertical_left_barrier"
                app:layout_constraintEnd_toStartOf="@id/vertical_right_barrier"
                app:layout_constraintTop_toTopOf="@id/speed_tv"
                app:layout_constraintBottom_toBottomOf="@id/speed_tv" />

            <TextView
                android:id="@+id/speed_result_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                tool:text="100ms"
                app:layout_constraintTop_toTopOf="@id/speed_tv"
                app:layout_constraintBottom_toBottomOf="@id/speed_tv"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/probability_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/probability_of_each_cell_alive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/speed_tv"/>

            <SeekBar
                android:id="@+id/probability_sb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/probability_tv"
                app:layout_constraintEnd_toStartOf="@id/vertical_right_barrier"/>

            <TextView
                android:id="@+id/probability_result_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                tool:text="0.5"
                app:layout_constraintTop_toTopOf="@id/probability_sb"
                app:layout_constraintBottom_toBottomOf="@id/probability_sb"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/vertical_left_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="map_size_tv, speed_tv"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/vertical_right_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="start"
                app:constraint_referenced_ids="map_size_result_tv, speed_result_tv, probability_result_tv"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>